# Lima-camera-frelon

./: .gitlab-ci.yml  CMakeLists.txt  README.md
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst
include/: Frelon.h  FrelonCamera.h  FrelonCorrection.h  FrelonGeometry.h  FrelonInterface.h  FrelonModel.h  FrelonSerialLine.h  FrelonTimingCtrl.h
python/: FrelonAcq.py  __init__.py
sip/: Frelon.sip  FrelonCamera.sip  FrelonCorrection.sip  FrelonGeometry.sip  FrelonInterface.sip  FrelonModel.sip  FrelonSerialLine.sip
src/: Frelon.cpp  FrelonCamera.cpp  FrelonGeometry.cpp  FrelonInterface.cpp  FrelonModel.cpp  FrelonSerialLine.cpp  FrelonTimingCtrl.cpp  Makefile
tango/: CMakeLists.txt  Frelon.py
test/: .gitignore  CMakeLists.txt  Makefile  pre_calibrate_frelon16_timing.py  test_frelon.cpp  test_frelon_acc.py  test_frelon_control.cpp  test_frelon_control.py  test_frelon_interface.cpp  test_frelon_interface.py  test_frelon_lima_gldisplay.py  test_frelon_measure_seqtim_status.py  test_frelon_saving.py  test_frelon_serial_line.py  test_frelon_spectroscopy.cpp  test_frelon_spectroscopy_lima_tango.py  test_frelon_time_calc.py  test_frelon_timing_lima_tango.py  testfreloninterface.cpp
